[package]
name = "sadik"
version = "0.1.0"
authors = ["Lee Smet <lee.smet@hotmail.com>"]
edition = "2021"
rust-version = "1.73.0"
description = "Distributed, eventually consistent S3 implementation"
readme = "./README.md"
repository = "https://github.com/LeeSmet/sadik"
license = "Apache-2.0 OR MIT"
keywords = ["s3", "distributed", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
datacake = { version = "0.7.1", features = ["rkyv", "datacake-lmdb"] }
s3s = "0.8.0"
tokio = { version = "1.33.0", features = ["full"] }
